PAN-21 - FieldTypes hinzugefügt